--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "react-dom": "17.0.1",
     "react-feather": "2.0.9",
     "react-scripts": "4.0.1",
-    "styled-components": "5.2.1"
+    "styled-components": "~5.3.11"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
